--- a/public/style.css
+++ b/public/style.css
@@ -178,4 +178,11 @@ button:disabled {
     font-size: 16px;
     padding: 15px 32px;
   }
+  a{
+    color:white
+  }
+
+  .vidlist{
+    color: white;
+  }
 }
